# grpc-demo

./: CMakeLists.txt  LICENSE  README.md
inc/: demo_api.h
src/: CMakeLists.txt
src/back-end/: CMakeLists.txt  common_back_end.h  demo_back_end.cpp  demo_back_end.h
src/daemon/: CMakeLists.txt  main.cpp
src/front-end/: CMakeLists.txt  front_end.cpp
src/protocol/: CMakeLists.txt  grpc_common.h  grpc_demo_api.h
src/protocol/client/: grpc_demo_client.cpp  grpc_demo_client.h  grpc_demo_client_api.cpp
src/protocol/cmake/: FindGRPC.cmake  grpc.cmake
src/protocol/proto/: rpc.proto
src/protocol/service/: grpc_demo_service.cpp  grpc_demo_service.h  grpc_demo_service_api.cpp
tests/: CMakeLists.txt
tests/sc-tests/: CMakeLists.txt  sc_tests_app.cpp
